--- a/source/application/configs/application.ini
+++ b/source/application/configs/application.ini
@@ -9,6 +9,7 @@ resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 0
 
 resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
+autoloadernamespaces.core = "core_"
 [staging : production]
 
 [testing : production]
