--- a/.editorconfig
+++ b/.editorconfig
@@ -1,14 +1,26 @@
 root = true
 
 [*]
-
 indent_style = space
 indent_size = 2
 end_of_line = lf
-charset = utf-8
 trim_trailing_whitespace = true
-insert_final_newline = true
+charset = utf-8
+insert_final_newline = false
 
-[*.md]
+[*.{py,sh,feature}]
+max_line_length = 80
+indent_size = 4
 
-trim_trailing_whitespace = false
+# Tabs
+[*.{less,css}]
+indent_style = tab
+
+[Vagrantfile]
+indent_style = tab
+
+[Makefile]
+indent_style = tab
+
+[README.md]
+max_line_length = 80
